--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "debug": "~2.1.1",
     "express": "~4.12.2",
     "express-session": "^1.10.4",
-    "jade": "~1.9.2",
+    "pug": "latest",
     "morgan": "~1.5.1",
     "pg": "^4.3.0",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^2.0.5",
+    "sequelize": "~3.17.0",
     "serve-favicon": "~2.2.0",
     "sqlite3": "^3.0.5"
   }
