--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "body-parser": "~1.12.0",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
-    "express": "~4.12.2",
+    "express": "^4.12.4",
     "express-session": "^1.10.4",
-    "pug": "latest",
+    "jade": "^1.11.0",
     "morgan": "~1.5.1",
     "pg": "^4.3.0",
     "pg-hstore": "^2.3.2",
+    "pug": "latest",
     "sequelize": "~3.17.0",
     "serve-favicon": "~2.2.0",
     "sqlite3": "^3.0.5"
